# horizon

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Horizon.mdj  README.md  gitlab-ci.sh  horizon  horizon.sh  xmas_dun01-original-stored.txt
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Database/: CMakeLists.txt  ConnectionPool.h  ConnectionPool.hpp  MySqlConnection.h  MySqlConnection.hpp
src/Core/Logging/: Logger.cpp  Logger.hpp
src/Core/Multithreading/: LockedLookupTable.hpp  LockedQueue.hpp  ProducerConsumerQueue.h  ProducerConsumerQueue.hpp  ThreadSafeQueue.hpp  WorkerThreadPool.hpp
src/Core/Multithreading/TaskScheduler/: TaskScheduler.cpp  TaskScheduler.hpp
src/Core/Networking/: AcceptSocketMgr.hpp  AsyncAcceptor.hpp  CMakeLists.txt  ConnectSocketMgr.hpp  Connector.hpp  NetworkConnector.hpp  NetworkThread.hpp  Session.hpp  Socket.hpp  SocketMgr.hpp
src/Core/Networking/Buffer/: ByteBuffer.cpp  ByteBuffer.hpp  ByteConverter.hpp  MessageBuffer.hpp
src/Core/Structures/: CMakeLists.txt  TypeList.hpp
src/Core/Structures/LinkedList/: Element.hpp  Head.hpp
src/Libraries/: CMakeLists.txt
src/Libraries/Argon2/: Argon2.hpp  CMakeLists.txt
src/Libraries/BCrypt/: BCrypt.cpp  BCrypt.hpp  CMakeLists.txt  Makefile  WinBCrypt.hpp  bcrypt.c  bcrypt.h
src/Libraries/GRF/: CMakeLists.txt  DES.cpp  DES.hpp  GRF.cpp  GRF.hpp
src/Libraries/MapCache/: CMakeLists.txt  MapCache.cpp  MapCache.hpp
src/Server/: CMakeLists.txt  Packet.hpp  Server.cpp  Server.hpp
src/Server/Auth/: Auth.cpp  Auth.hpp  AuthHandle.cpp  AuthHandle.h  AuthPacketHandler.cpp  AuthPacketHandler.hpp  AuthPackets.h  AuthPackets.hpp  AuthSession.cpp  AuthSession.hpp  AuthSocketMgr.hpp  CMakeLists.txt
src/Server/Auth/Interface/: AuthClientInterface.cpp  AuthClientInterface.hpp  InterAPI.hpp
src/Server/Auth/PacketHandler/: AuthPacketHandler.cpp  AuthPacketHandler.hpp  AuthPackets.hpp  InterAuthPacketHandler.cpp  InterAuthPacketHandler.hpp  InterPacketHandler.cpp  InterPacketHandler.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketHandlerFactory.hpp  Packets.hpp
src/Server/Auth/Packets/: AC_ACCEPT_LOGIN.cpp  AC_ACCEPT_LOGIN.hpp  AC_ACCEPT_LOGIN2.cpp  AC_ACCEPT_LOGIN2.hpp  AC_ACK_EKEY_FAIL_AUTHREFUSE.cpp  AC_ACK_EKEY_FAIL_AUTHREFUSE.hpp  AC_ACK_EKEY_FAIL_INPUTEKEY.cpp  AC_ACK_EKEY_FAIL_INPUTEKEY.hpp  AC_ACK_EKEY_FAIL_NEEDCARDPASS.cpp  AC_ACK_EKEY_FAIL_NEEDCARDPASS.hpp  AC_ACK_EKEY_FAIL_NOTEXIST.cpp  AC_ACK_EKEY_FAIL_NOTEXIST.hpp  AC_ACK_EKEY_FAIL_NOTICE.cpp  AC_ACK_EKEY_FAIL_NOTICE.hpp  AC_ACK_EKEY_FAIL_NOTUSEDEKEY.cpp  AC_ACK_EKEY_FAIL_NOTUSEDEKEY.hpp  AC_ACK_EKEY_FAIL_NOTUSESEKEY.cpp  AC_ACK_EKEY_FAIL_NOTUSESEKEY.hpp  AC_ACK_FIRST_LOGIN.cpp  AC_ACK_FIRST_LOGIN.hpp  AC_ACK_GAME_GUARD.cpp  AC_ACK_GAME_GUARD.hpp  AC_ACK_HASH.cpp  AC_ACK_HASH.hpp  AC_ACK_PT_ID_INFO.cpp  AC_ACK_PT_ID_INFO.hpp  AC_ASK_PNGAMEROOM.cpp  AC_ASK_PNGAMEROOM.hpp  AC_EVENT_RESULT.cpp  AC_EVENT_RESULT.hpp  AC_LOGIN_OTP.cpp  AC_LOGIN_OTP.hpp  AC_NOTIFY_ERROR.cpp  AC_NOTIFY_ERROR.hpp  AC_OTP_AUTH_ACK.cpp  AC_OTP_AUTH_ACK.hpp  AC_OTP_USER.cpp  AC_OTP_USER.hpp  AC_REALNAME_AUTH.cpp  AC_REALNAME_AUTH.hpp  (+84 more)
src/Server/Auth/Session/: AuthSession.cpp  AuthSession.hpp  InterSession.cpp  InterSession.hpp  Session.cpp  Session.hpp
src/Server/Auth/Socket/: AuthSocket.cpp  AuthSocket.hpp  InterSocket.cpp  InterSocket.hpp
src/Server/Auth/SocketMgr/: ClientSocketMgr.cpp  ClientSocketMgr.hpp  InterSocketMgr.hpp
src/Server/Char/: CMakeLists.txt  Char.cpp  Char.h  Char.hpp  CharHandle.cpp  CharHandle.h  CharPackets.h  CharPackets.hpp  CharSession.cpp  CharSession.h  CharSession.hpp  CharSocketMgr.hpp
src/Server/Char/Database/: Query.cpp  Query.hpp
src/Server/Char/Interface/: CharClientInterface.cpp  CharClientInterface.hpp  InterAPI.hpp
src/Server/Char/PacketHandler/: InterPacketHandler.cpp  InterPacketHandler.hpp  PacketHandler.cpp  PacketHandler.hpp  PacketHandlerFactory.hpp  Packets.hpp
src/Server/Char/Packets/: CH_ACK_CHANGE_CHARACTERNAME.cpp  CH_ACK_CHANGE_CHARACTERNAME.hpp  CH_AVAILABLE_SECOND_PASSWD.cpp  CH_AVAILABLE_SECOND_PASSWD.hpp  CH_CHARLIST_REQ.cpp  CH_CHARLIST_REQ.hpp  CH_CHECKBOT.cpp  CH_CHECKBOT.hpp  CH_DELETE_CHAR.cpp  CH_DELETE_CHAR.hpp  CH_DELETE_CHAR2.cpp  CH_DELETE_CHAR2.hpp  CH_DELETE_CHAR3.cpp  CH_DELETE_CHAR3.hpp  CH_DELETE_CHAR3_CANCEL.cpp  CH_DELETE_CHAR3_CANCEL.hpp  CH_DELETE_CHAR3_EXT.cpp  CH_DELETE_CHAR3_EXT.hpp  CH_DELETE_CHAR3_RESERVED.cpp  CH_DELETE_CHAR3_RESERVED.hpp  CH_DELETE_SECOND_PASSWD.cpp  CH_DELETE_SECOND_PASSWD.hpp  CH_EDIT_SECOND_PASSWD.cpp  CH_EDIT_SECOND_PASSWD.hpp  CH_ENTER.cpp  CH_ENTER.hpp  CH_ENTER2.cpp  CH_ENTER2.hpp  CH_ENTER_CHECKBOT.cpp  CH_ENTER_CHECKBOT.hpp  CH_MAKE_CHAR.cpp  CH_MAKE_CHAR.hpp  CH_MAKE_CHAR_NOT_STATS.cpp  CH_MAKE_CHAR_NOT_STATS.hpp  CH_MAKE_SECOND_PASSWD.cpp  CH_MAKE_SECOND_PASSWD.hpp  CH_NOT_AVAILABLE_SECOND_PASSWD.cpp  CH_NOT_AVAILABLE_SECOND_PASSWD.hpp  CH_REQ_CHANGE_CHARACTERNAME.cpp  CH_REQ_CHANGE_CHARACTERNAME.hpp  (+104 more)
src/Server/Char/Session/: CharSession.cpp  CharSession.hpp  InterSession.cpp  InterSession.hpp  (+2 more)
src/Server/Common/: CMakeLists.txt  Client.hpp  Definitions.hpp  Horizon.hpp  Packet.hpp  PacketBuffer.hpp  Server.cpp  Server.hpp
src/Server/Inter/: CMakeLists.txt  Inter.cpp  Inter.hpp  InterPackets.hpp  InterSession.cpp  InterSession.hpp  InterSocketMgr.hpp  InterStorage.hpp  InterStore.hpp
src/Server/Zone/: CMakeLists.txt  Zone.cpp  Zone.hpp  ZonePackets.hpp  ZoneSession.cpp  ZoneSession.hpp  ZoneSocketMgr.hpp
src/Tests/: AStarTest.cpp  Argon2Test.cpp  BCryptTest.cpp  CMakeLists.txt  LinkedListTest.cpp  LockedLookupTableTest.cpp  Logging.cpp  LoggingTest.cpp  ObservableStatusTest.cpp  ReferenceListTest.cpp  ReferenceTypeListTest.cpp  SCryptTest.cpp  Sol2Test.cpp  TaskSchedulingTest.cpp  ThreadSafeQueueTest.cpp  WorkerThreadPoolTest.cpp  prontera.cpp
src/Tools/: CMakeLists.txt
src/Tools/mapcache/: CMakeLists.txt  MapCache.cpp  MapCache.hpp
src/Utilities/: Tokenizer.cpp  Tokenizer.hpp  Utilities.h  Utilities.hpp
src/Utility/: CMakeLists.txt  StrUtils.hpp  Tokenizer.cpp  Tokenizer.hpp  Utility.cpp  Utility.hpp
(+18176 files in other folders)
